fix (CSS): added min-height to prevent scrollbar from appearing on list name

--- a/src/assets/scss/lists.scss
+++ b/src/assets/scss/lists.scss
@@ -118,8 +118,9 @@ ul[role='listbox'] {
 			border-bottom: calc(var(--outline-width) + 1px) var(--outline-style) transparent;
 			line-height: 1.4;
 			margin-top: calc(-1 * var(--padding-y));
-			padding-top: var(--padding-y);
+			min-height: 1.05lh;
 			padding-bottom: calc(var(--padding-y) / 2);
+			padding-top: var(--padding-y);
 
 			&:focus-visible {
 				border-bottom-color: var(--outline-color);
